moving custom_widget to custom_widgets

--- a/apps/calendar/cal_test1.yaml
+++ b/apps/calendar/cal_test1.yaml
@@ -1,7 +1,7 @@
 CalendarioTest1:
   module: calendar
   class: Calendar
-  debug: True
+  debug: true
   sensorname: cal_test1
-  update: 5
-  calendars: calendar.ical_test1, calendar.ical_test2
+  update: 1
+  calendars: calendar.ical_test1,calendar.ical_test2
