new app to retrive a ics url

--- a/apps/hacalendar/cal_test1.yaml
+++ b/apps/hacalendar/cal_test1.yaml
@@ -1,6 +1,6 @@
-CalendarioTest1:
-  module: calendar
-  class: Calendar
+CalendarTest1:
+  module: hacalendar
+  class: HaCalendar
   debug: true
   sensorname: cal_test1
   update: 1
